# kaiman

./: .gitignore
install/: local_setup.sh  setup.sh
install/gimbal_controller/lib/gimbal_controller/: find
install/gimbal_controller/share/ament_index/resource_index/package_run_dependencies/: gimbal_controller
install/gimbal_controller/share/gimbal_controller/: package.dsv  package.ps1  package.sh
install/gimbal_controller/share/gimbal_controller/cmake/: gimbal_controllerConfig.cmake
install/homework_bringup/share/ament_index/resource_index/parent_prefix_path/: homework_bringup
install/homework_bringup/share/homework_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/homework_bringup/share/homework_bringup/cmake/: homework_bringupConfig.cmake
install/interfaces/include/interfaces/interfaces/msg/: target_array.hpp
install/interfaces/include/interfaces/interfaces/msg/detail/: target__functions.c  target__rosidl_typesupport_fastrtps_c.h  target__rosidl_typesupport_fastrtps_cpp.hpp  (+11 more)
install/interfaces/share/ament_index/resource_index/rosidl_interfaces/: interfaces
install/interfaces/share/interfaces/: local_setup.sh  package.sh
install/interfaces/share/interfaces/cmake/: export_interfaces__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake
install/interfaces/share/interfaces/msg/: Target.idl  Target.msg
install/serial_interface/lib/serial_interface/: fire
install/serial_interface/share/ament_index/resource_index/parent_prefix_path/: serial_interface
install/serial_interface/share/serial_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vision_detector/lib/vision_detector/: read
install/vision_detector/share/vision_detector/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vision_detector/share/vision_detector/cmake/: vision_detectorConfig.cmake
log/: latest_build
src/: .gitignore
src/gimbal_controller/: CMakeLists.txt  package.xml
src/gimbal_controller/src/: chooser.cpp  chooser.h  main.cpp
src/homework_bringup/: CMakeLists.txt  package.xml
src/homework_bringup/launch/: bringup.launch.py
src/interfaces/: CMakeLists.txt
src/serial_interface/: CMakeLists.txt  package.xml
src/serial_interface/serialPro/: CMakeLists.txt
src/serial_interface/serialPro/example/: referee_serial_test.cpp
src/serial_interface/serialPro/include/serialPro/: refereeSerial.h
src/serial_interface/src/: SendToSer.cpp  SendToSer.h  main.cpp
src/vision_detector/: CMakeLists.txt
src/vision_detector/src/: kalman.cpp  kalman.h  main.cpp  read_video.cpp  read_video.h
(+4 files in other folders)
