cmake_minimum_required(VERSION 3.8)
project(vision_detector)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(OpenCV REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(interfaces REQUIRED)


include_directories(${EIGEN3_INCLUDE_DIR})

add_executable(read
        src/main.cpp
        src/read_video.cpp
        src/read_video.h
        src/kalman.cpp
        src/kalman.h
        )

ament_target_dependencies(read rclcpp sensor_msgs cv_bridge Eigen3 OpenCV interfaces)

#target_link_libraries(${PROJECT_NAME} Eigen3::Eigen)
        if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()
install(TARGETS read
DESTINATION lib/${PROJECT_NAME})
ament_package()
